--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
         "teqneers/shamir" : "*",		
 	"frdl/php-floodprotection": "*",
 	"frdl/remote-psr4" : "*",
+	"frdl/proxy" : "*",
 	"webfan3/php-easy-breaker" : "*",
         "comcast/php-legal-licenses":"*",
 	"ninsuo/php-shared-memory":"*", 
@@ -70,7 +71,9 @@
 	"nette/reflection":"*",  
 	"nette/php-generator":"*",
 	"spatie/temporary-directory": "*",
-	"nikic/php-parser" : "*"
+	"nikic/php-parser" : "*",
+	"hellogerard/jobby" : "*",
+	"php-di/php-di" : "*"
   },	  
   "autoload": {
     "classmap" : ["src/"],
