--- a/composer.json
+++ b/composer.json
@@ -37,12 +37,12 @@
         "downloads": {
           "vendor-patch/autoload-package": {
             "url": "https://github.com/vendor-patch/autoload-package/archive/refs/heads/master.zip",
-            "path": "./modules/vendor-patch/autoload-package",
+            "path": "./../../../modules/vendor-patch/autoload-package",
             "ignore": [".*"]
         },
         "inverisoss/tiny-php-queue": {
             "url": "https://github.com/inverisOSS/tiny-php-queue/archive/refs/tags/1.0.0.zip",
-            "path": "./modules/inverisoss/tiny-php-queue",
+            "path": "./../../../modules/inverisoss/tiny-php-queue",
             "ignore": [".*"]
         }
     }
@@ -83,8 +83,7 @@
 	"karelwintersky/monolog-pdo-handler" : "*",
 	"catfan/medoo" : "*",
 	"byjg/migration" : "*",
-	"bramus/router" : "*",
-	"inverisoss/tiny-php-queue": "1.0.0"
+	"bramus/router" : "*" 
   },	  
   "autoload": {
     "classmap" : ["src/"],
