--- a/composer.json
+++ b/composer.json
@@ -36,13 +36,11 @@
 	 }, 
         "downloads": {
           "vendor-patch/autoload-package": {
-            "url": "https://github.com/vendor-patch/autoload-package/archive/refs/heads/master.zip",
-            "path": "./../../../modules/vendor-patch/autoload-package",
+            "url": "https://github.com/vendor-patch/autoload-package/archive/refs/heads/master.zip"
             "ignore": [".*"]
         },
         "inverisoss/tiny-php-queue": {
-            "url": "https://github.com/inverisOSS/tiny-php-queue/archive/refs/tags/1.0.0.zip",
-            "path": "./../../../modules/inverisoss/tiny-php-queue",
+            "url": "https://github.com/inverisOSS/tiny-php-queue/archive/refs/tags/1.0.0.zip" 
             "ignore": [".*"]
         }
     }
