--- a/composer.json
+++ b/composer.json
@@ -36,11 +36,11 @@
 	 }, 
         "downloads": {
           "vendor-patch/autoload-package": {
-            "url": "https://github.com/vendor-patch/autoload-package/archive/refs/heads/master.zip"
+            "url": "https://github.com/vendor-patch/autoload-package/archive/refs/heads/master.zip",
             "ignore": [".*"]
         },
         "inverisoss/tiny-php-queue": {
-            "url": "https://github.com/inverisOSS/tiny-php-queue/archive/refs/tags/1.0.0.zip" 
+            "url": "https://github.com/inverisOSS/tiny-php-queue/archive/refs/tags/1.0.0.zip" ,
             "ignore": [".*"]
         }
     }
