--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
 },
 "minimum-stability":"dev",
     "config": {
-         "bin-dir": "~/.webfan/bin",
+         "bin-dir": "./../../../bin",
         "preferred-install": "auto",
         "cache-files-ttl": 3600,
         "prepend-autoloader": true
