--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,7 @@
 	"nette/caching" :"*", 
 	"nette/robot-loader":"*",	
 	"nette/reflection":"*",  
-	"nette/php-generator":"*",
+	"nette/php-generator":">=4.0.3",
 	"spatie/temporary-directory": "*",
 	"nikic/php-parser" : "*",
 	"hellogerard/jobby" : "*",
