--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
 	}],
         "type": "metapackage",
 	"require": {
-		"php": ">=7.0 | >=8.0",
 		"frdl/webfan": "*",
 		"composer/composer": "*",
 		"friendsofphp/proxy-manager-lts": "*",
@@ -47,12 +46,12 @@
 		"symfony/finder": "*",
 		"psr/http-message": "*",
 
-		"laminas/laminas-httphandlerrunner": ">=2.5.0",
+		"laminas/laminas-httphandlerrunner": "*",
 
 		"roave/security-advisories": "dev-master",
-		"frdl/auth": ">=0.0.3",
-		"frdl/cms": ">=0.0.2",
-		"rosell-dk/image-mime-type-guesser": "^0.3",
+		"frdl/auth": "*",
+		"frdl/cms": "*",
+		"rosell-dk/image-mime-type-guesser": "*",
 		"league/commonmark": "*",
 		"mustangostang/spyc": "^0.6",
 		"minicli/minicli": "*",
@@ -64,7 +63,7 @@
 		"php-vfs/php-vfs": "*",
 		"brzuchal/filesystem-stream-wrapper": "*",
 		"ivopetkov/html5-dom-document-php": "*",
-		"ivopetkov/html-server-components-compiler": ">=1.2.0",
+		"ivopetkov/html-server-components-compiler": "*",
 		"fusio/sdk": "*",
 		"altorouter/altorouter": "*",
 		"league/html-to-markdown": "*",
@@ -79,9 +78,9 @@
 		"php-di/invoker": "*",
 		"mirazmac/php-requirements-checker": "*",
 		"mirazmac/dotenvwriter": "*",
-		"league/route": ">=5.1.2",
+		"league/route": "*",
 		"wmde/php-vuejs-templating": "*",
-		"php-di/php-di": "6.4.0",
+		"php-di/php-di": "*",
 		"ocramius/proxy-manager": "*",
 		"spatie/once": "*",
 		"roave/better-reflection": "*",
@@ -89,7 +88,7 @@
 		"joomla/keychain": "~2.0",
 		"rtio/activitypub-core": "*",
 		"delirehberi/webfinger": "*",
-		"relay/relay": "~2.0",
+		"relay/relay": "*",
 		"workerman/phpsocket.io": "*",
 		"teqneers/shamir": "*",
 		"blake-gardner/mac-address": "*",
