--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
 		"frdl/cms": "*",
 		"rosell-dk/image-mime-type-guesser": "*",
 		"league/commonmark": "*",
-		"mustangostang/spyc": "^0.6",
+		"mustangostang/spyc": "*",
 		"minicli/minicli": "*",
 		"league/flysystem-sftp": "*",
 		"league/flysystem-webdav": "*",
@@ -85,7 +85,7 @@
 		"spatie/once": "*",
 		"roave/better-reflection": "*",
 		"appstract/php-hostsfile": "*",
-		"joomla/keychain": "~2.0",
+		"joomla/keychain": "*",
 		"rtio/activitypub-core": "*",
 		"delirehberi/webfinger": "*",
 		"relay/relay": "*",
